change title and div height

--- a/elm-port-sample/index.html
+++ b/elm-port-sample/index.html
@@ -3,13 +3,13 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Elm And Twitter bootstrap</title>
+  <title>Call JS from Elm</title>
   <script type="text/javascript" src="http://elm-lang.org/elm-runtime.js"></script>
   <script type="text/javascript" src="build/PortTest.js"></script>
 </head>
 
 <body>
-  <div id="portTest" style="width:50%; height:400px;" ></div>
+  <div id="portTest"></div>
 </body>
 
 <script type="text/javascript">
