--- a/elm-pibyball/index.html
+++ b/elm-pibyball/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Call JS from Elm</title>
+  <title>Pi Calcuration by Bounding Balls</title>
   <script type="text/javascript" src="http://elm-lang.org/elm-runtime.js"></script>
   <script type="text/javascript" src="build/PiByBall.js"></script>
 </head>
