change location of elm-runtime.js

--- a/Barnley-Fern-Elm/Leaf.html
+++ b/Barnley-Fern-Elm/Leaf.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html><head><meta charset="UTF-8"><title>Leaf</title><script type="text/javascript" src="/usr/local/share/elm/compiler/elm-runtime.js"></script><script type="text/javascript">Elm.Leaf = Elm.Leaf || {};
+<html><head><meta charset="UTF-8"><title>Leaf</title><script type="text/javascript" src="./runtime/elm-runtime.js"></script><script type="text/javascript">Elm.Leaf = Elm.Leaf || {};
 Elm.Leaf.make = function (_elm) {
    "use strict";
    _elm.Leaf = _elm.Leaf || {};
