fix to display Laeaf'main can display demo

--- a/Barnley-Fern-Elm/Leaf.html
+++ b/Barnley-Fern-Elm/Leaf.html
@@ -124,9 +124,9 @@ Elm.Leaf.make = function (_elm) {
                return A3($Graphics$Collage.collage,
                  _v10._0,
                  _v10._1,
-                 A2(drawLeaf,0.5,1000));}
+                 A2(drawLeaf,0.84,1000));}
             _E.Case($moduleName,
-            "on line 64, column 25 to 55");
+            "on line 64, column 25 to 56");
          }();
       };
       return A2($Signal._op["<~"],
@@ -136,6 +136,7 @@ Elm.Leaf.make = function (_elm) {
    _elm.Leaf.values = {_op: _op
                       ,plotPoints: plotPoints
                       ,nextState: nextState
+                      ,main: main
                       ,initialState: initialState};
    return _elm.Leaf.values;
 };Elm.Generator = Elm.Generator || {};
