change for Elm 0.13 new snapshot

--- a/Barnley-Fern-Elm/Leaf.html
+++ b/Barnley-Fern-Elm/Leaf.html
@@ -134,10 +134,11 @@ Elm.Leaf.make = function (_elm) {
       $Window.dimensions);
    }();
    _elm.Leaf.values = {_op: _op
-                      ,plotPoints: plotPoints
+                      ,initialState: initialState
                       ,nextState: nextState
+                      ,plotPoints: plotPoints
                       ,main: main
-                      ,initialState: initialState};
+                      ,State: State};
    return _elm.Leaf.values;
 };Elm.Generator = Elm.Generator || {};
 Elm.Generator.Standard = Elm.Generator.Standard || {};
@@ -216,7 +217,7 @@ Elm.Generator.Standard.make = function (_elm) {
                         ,_1: A2(Standard,s1$$,s2$$)};
               }();}
          _E.Case($moduleName,
-         "between lines 59 and 67");
+         "between lines 58 and 66");
       }();
    };
    var stdSplit = function (_v6) {
@@ -226,7 +227,7 @@ Elm.Generator.Standard.make = function (_elm) {
             return function () {
                  var _raw = $Basics.snd(stdNext(_v6)),
                  $ = _raw.ctor === "Standard" ? _raw : _E.Case($moduleName,
-                 "on line 73, column 28 to 44"),
+                 "on line 72, column 28 to 44"),
                  t1 = $._0,
                  t2 = $._1;
                  var new_s2 = _U.eq(_v6._1,
@@ -238,7 +239,7 @@ Elm.Generator.Standard.make = function (_elm) {
                         ,_1: A2(Standard,t1,new_s2)};
               }();}
          _E.Case($moduleName,
-         "between lines 71 and 74");
+         "between lines 70 and 73");
       }();
    };
    var generator = function (seed) {
@@ -249,21 +250,7 @@ Elm.Generator.Standard.make = function (_elm) {
       stdRange);
    };
    _elm.Generator.Standard.values = {_op: _op
-                                    ,generator: generator
-                                    ,Standard: Standard
-                                    ,mkStdGen: mkStdGen
-                                    ,magicNum0: magicNum0
-                                    ,magicNum1: magicNum1
-                                    ,magicNum2: magicNum2
-                                    ,magicNum3: magicNum3
-                                    ,magicNum4: magicNum4
-                                    ,magicNum5: magicNum5
-                                    ,magicNum6: magicNum6
-                                    ,magicNum7: magicNum7
-                                    ,magicNum8: magicNum8
-                                    ,stdNext: stdNext
-                                    ,stdSplit: stdSplit
-                                    ,stdRange: stdRange};
+                                    ,generator: generator};
    return _elm.Generator.Standard.values;
 };Elm.Generator = Elm.Generator || {};
 Elm.Generator.make = function (_elm) {
@@ -366,7 +353,7 @@ Elm.Generator.make = function (_elm) {
                         generator)};
               }();}
          _E.Case($moduleName,
-         "between lines 76 and 89");
+         "between lines 73 and 86");
       }();
    });
    var floatRange = F2(function (_v5,
@@ -393,7 +380,7 @@ Elm.Generator.make = function (_elm) {
                         ,_1: generator$};
               }();}
          _E.Case($moduleName,
-         "between lines 120 and 125");
+         "between lines 117 and 122");
       }();
    });
    var $float = floatRange({ctor: "_Tuple2"
@@ -405,13 +392,11 @@ Elm.Generator.make = function (_elm) {
    _elm.Generator.values = {_op: _op
                            ,int32: int32
                            ,int32Range: int32Range
-                           ,iLogBase: iLogBase
-                           ,maxInt32: maxInt32
-                           ,minInt32: minInt32
                            ,$float: $float
                            ,floatRange: floatRange
                            ,listOf: listOf
-                           ,listOfHelp: listOfHelp
+                           ,minInt32: minInt32
+                           ,maxInt32: maxInt32
                            ,Generator: Generator};
    return _elm.Generator.values;
 };Elm.IntRange = Elm.IntRange || {};
