--- a/elm-html-bootstrap-sample/index.html
+++ b/elm-html-bootstrap-sample/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Elm And Twitter bootstrap</title>
-  <script type="text/javascript" src="http://elm-lang.org/elm-runtime.js"></script>
+  <script type="text/javascript" src="../Barnley-Fern-Elm/runtime/elm-runtime.js"></script>
   <script type="text/javascript" src="build/HtmlTest.js"></script>
 
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
