--- a/elm-pibyball/index.html
+++ b/elm-pibyball/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Pi Calcuration by Bounding Balls</title>
-  <script type="text/javascript" src="http://elm-lang.org/elm-runtime.js"></script>
+  <script type="text/javascript" src="../Barnley-Fern-Elm/runtime/elm-runtime.js"></script>
   <script type="text/javascript" src="build/PiByBall.js"></script>
 </head>
 
