--- a/elm-port-sample/index.html
+++ b/elm-port-sample/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Call JS from Elm</title>
-  <script type="text/javascript" src="../Barnley-Fern-Elm/runtime/elm-runtime.js"></script>
+  <script type="text/javascript" src="../elm-doukaku-24-filter-pipeline/build/elm-runtime-0.12.3.js"></script>
   <script type="text/javascript" src="build/PortTest.js"></script>
 </head>
 
